apps/frontcode/auth-chat-api/manifests/02-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-chat-api
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-chat-api
  template:
    metadata:
      labels:
        app: auth-chat-api
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: api
        image: 10.2.2.40:5000/library/auth-chat-api:latest
        ports:
        - containerPort: 8000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - k8s-workernode6
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: auth-chat-api
  namespace: production
spec:
  selector:
    app: auth-chat-api
  ports:
  - name: http
    port: 80
    targetPort: 8000
